Move my local makefile settings out of the main Makefile, and allow for a Makefile.local to be optionally included

--- a/.hgignore
+++ b/.hgignore
@@ -3,6 +3,7 @@ syntax: glob
 .*.d		# GCC generated dependency files
 *.e		# preprocessed files
 *.o		# object files
+Makefile.local	# Local makefile tweaks
 cscope.*	# Cscope indexes
 System.map-*
 vmcore
