Fix up spec file generation including hacking at sed

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ System.map-*
 vmcore
 xen-*.map
 xen-crashdump-analyser*
-!xen-crashdump-analyser.spec*
+!xen-crashdump-analyser.spec.in
 doxygen/
 outdir/
