--- a/mk/Makefile
+++ b/mk/Makefile
@@ -1,5 +1,3 @@
-USE_BRANDING := yes
-IMPORT_BRANDING := yes
 include $(B_BASE)/common.mk
 include $(B_BASE)/rpmbuild.mk
 
@@ -10,14 +8,8 @@ PACKAGE_NAME := xen-crashdump-analyser
 SPECFILE := $(PACKAGE_NAME).spec
 
 .PHONY: build
-build: $(RPM_DIRECTORIES) srpm  $(MY_SOURCES)/MANIFEST
+build: $(RPM_DIRECTORIES) srpm
 	$(RPMBUILD) --rebuild $(MY_OUTPUT_DIR)/SRPMS/$(PACKAGE_NAME)-*.src.rpm
-	mkdir -p $(MY_MAIN_PACKAGES)
-	cp $(MY_OUTPUT_DIR)/RPMS/*/$(PACKAGE_NAME)-*.rpm $(MY_MAIN_PACKAGES)
-
-$(MY_SOURCES)/MANIFEST: $(MY_OUTPUT_DIR)/SRPMS
-	mkdir -p $(MY_SOURCES)
-	/bin/sh ./srpms-to-manifest $(PACKAGE_NAME) $(MY_OUTPUT_DIR)/SRPMS > $@
 
 REPO = $(call git_loc,$(PACKAGE_NAME))
 
@@ -31,7 +23,7 @@ $(SPECFILE): $(SPECFILE).in
 	mv -f $@.tmp $@; }
 
 .PHONY: srpm
-srpm: $(SPECFILE)
+srpm: $(SPECFILE) $(RPM_DIRECTORIES)
 	mkdir -p $(RPM_SOURCESDIR)
 	cd $(REPO) && git archive --format=tar --prefix=$(PACKAGE_NAME)/ \
 		`cat .git/refs/heads/master` \
