CP-9140: Conditionally build xen-crash-dump analyser using coverity

--- a/mk/xen-crashdump-analyser.spec.in
+++ b/mk/xen-crashdump-analyser.spec.in
@@ -12,7 +12,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
 %setup -q -n %{name}
 
 %build
-make
+%{?cov_wrap} make
 
 %install
 rm -rf $RPM_BUILD_ROOT
