--- a/mk/xen-crashdump-analyser.spec.in
+++ b/mk/xen-crashdump-analyser.spec.in
@@ -5,6 +5,7 @@ Release: @XCA_RELEASE@
 License: GPL
 Group: Applications/System
 Source: xen-crashdump-analyser-%{version}.tar.gz
+BuildRequires: gcc-c++
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
 %description
 
