--- a/mk/xen-crashdump-analyser.spec.in
+++ b/mk/xen-crashdump-analyser.spec.in
@@ -4,26 +4,23 @@ Version: @XCA_VERSION@
 Release: @XCA_RELEASE@
 License: GPL
 Group: Applications/System
-Source: xen-crashdump-analyser-%{version}.tar.gz
+Source: %{name}-%{version}.tar.gz
 BuildRequires: gcc-c++
-BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
+
 %description
 
 %prep
 %setup -q -n %{name}
 
 %build
-%{?cov_wrap} make
+%{?cov_wrap} %{__make}
 
 %install
-rm -rf $RPM_BUILD_ROOT
-
-mkdir -p -m755 $RPM_BUILD_ROOT%{_libdir}/xen/bin/
-
-install -m755 xen-crashdump-analyser $RPM_BUILD_ROOT%{_libdir}/xen/bin/xen-crashdump-analyser
+%{__rm} -rf %{buildroot}
+%{__install} -D -m755 xen-crashdump-analyser %{buildroot}%{_libdir}/xen/bin/xen-crashdump-analyser
 
 %clean
-rm -rf $RPM_BUILD_ROOT
+%{__rm} -rf %{buildroot}
 
 %post
 
